--- a/package.json
+++ b/package.json
@@ -21,9 +21,17 @@
     "dayjs": "^1.8.19",
     "next": "^9.2.1",
     "next-images": "^1.3.0",
+    "next-redux-wrapper": "^4.0.1",
     "react": "^16.12.0",
     "react-activity": "^1.2.2",
     "react-dom": "^16.12.0",
+    "react-ionicons": "^3.1.4",
+    "react-markdown": "^4.3.1",
+    "react-redux": "^7.1.3",
+    "react-syntax-highlighter": "^12.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.0",
     "typescript": "^3.7.5"
   }
