--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "contentful": "^7.13.1",
     "csstype": "^2.6.8",
     "dayjs": "^1.8.19",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
     "next-images": "^1.3.0",
     "next-redux-wrapper": "^4.0.1",
