--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.12.0",
     "react-activity": "^1.2.2",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-ionicons": "^3.1.4",
     "react-markdown": "^4.3.1",
     "react-syntax-highlighter": "^12.2.1",
