--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "react-syntax-highlighter": "^12.2.1",
     "styled-components": "^5.0.0",
     "typescript": "^3.7.5"
+  },
+  "resolutions": {
+    "react-helmet/react-side-effect": "2.1.0"
   }
 }
