--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csstype": "^2.6.8",
     "dayjs": "^1.8.19",
     "next": "^9.2.1",
+    "next-ga": "^2.3.4",
     "react": "^16.12.0",
     "react-activity": "^1.2.2",
     "react-dom": "^16.12.0",
