--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-ga": "^2.3.4",
     "react": "^16.12.0",
     "react-activity": "^1.2.2",
+    "react-context-theming": "^1.0.0-alpha.6",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-ionicons": "^3.1.4",
