--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@types/node": "^13.5.0",
-    "@types/react": "^16.9.19",
-    "babel-plugin-styled-components": "^1.10.6",
+    "@types/node": "13.9.0",
+    "@types/react": "16.9.23",
+    "babel-plugin-styled-components": "1.10.7",
     "browser-monads": "^1.0.0",
-    "contentful": "^7.13.1",
-    "csstype": "^2.6.8",
-    "dayjs": "^1.8.19",
-    "next": "^9.2.1",
+    "contentful": "7.14.0",
+    "csstype": "2.6.9",
+    "dayjs": "1.8.22",
+    "next": "9.3.0",
     "next-ga": "^2.3.4",
-    "react": "^16.12.0",
+    "react": "16.13.0",
     "react-activity": "^1.2.2",
     "react-context-theming": "^1.0.0-alpha.6",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.13.0",
     "react-helmet": "^5.2.1",
     "react-ionicons": "^3.1.4",
     "react-markdown": "^4.3.1",
     "react-syntax-highlighter": "^12.2.1",
-    "styled-components": "^5.0.0",
-    "typescript": "^3.7.5"
+    "styled-components": "5.0.1",
+    "typescript": "3.8.3"
   },
   "resolutions": {
     "react-helmet/react-side-effect": "2.1.0"
